added latest content